
public class Pistol : FireWeapon
{
    public Pistol()
    {
        Name = "Pistol";
        Damage = 15;
        Ammunition = 7;
    }
}
