
public class Rifle : FireWeapon
{
    public Rifle()
    {
        Name = "Rifle";
        Damage = 25;
        Ammunition = 3;
    }
}



