using UnityEngine;

public abstract class Damageable : MonoBehaviour
{
    public abstract void Use();
}
