using UnityEngine;

[CreateAssetMenu(fileName = "MeleeWeapon", menuName = "Weapons/MeleeWeaponData")]
public class MeleeWeaponScriptableObject : WeaponScriptableObject
{

}
