using UnityEngine;

[CreateAssetMenu(fileName = "RangedWeapon", menuName = "Weapons/RangedWeaponData")]
public class RangedWeaponScriptableObject : WeaponScriptableObject
{

}
