using UnityEngine;

public abstract class WeaponScriptableObject : ScriptableObject 
{
    public string Name;
    public int Damage;
}

